--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "nodemon dist/index.js",
     "lint": "eslint ./src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\""
-
   },
   "keywords": [],
   "author": "",
@@ -19,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
     "swagger-ui-express": "^5.0.1"
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
@@ -35,6 +36,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
+    "cors": "^2.8.5",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.4",
