--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "@types/swagger-jsdoc": "^6.0.4",
+    "bcrypt-ts": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
