--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "bcrypt-ts": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.2",
+    "mongoose": "^8.13.0",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.2"
   },
@@ -34,6 +35,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.12",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
